Fix visual bug in Chrome when 100vw of mainDisplay would add an x-scrollbar

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -127,7 +127,6 @@ input {
   padding-top: 13vh;
   padding-bottom: 5vh;
   min-height: 77vh;
-  width: 100vw;
   min-width: 360px;
   background-color: var(--bg-main-style);
 }
